# tree-sitter-strdl

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  README.md  grammar.js  package-lock.json  package.json  pyproject.toml  release-please-config.json  test-local.strdl  test.strdl  tree-sitter-strudel.pc  tree-sitter-strudel.wasm  tree-sitter.json
.github/workflows/: publish.yml
bindings/go/: binding_test.go
bindings/node/: filetypes_test.js
bindings/python/tests/: test_binding.py
bindings/rust/: lib.rs
mini/: grammar.js
mini/src/: grammar.json  node-types.json  parser.c
mini/test/corpus/: basics.txt
queries/: highlights.scm  injections.scm  locals.scm
scripts/: generate_domain_queries.js  local_install.sh
src/: grammar.json  node-types.json  parser.c
test/corpus/: array_literal.txt  arrow_funcs.txt  edge_cases.txt  function_call_chained.txt  function_calls.txt  number_args.txt  objects_args.txt  variable_var.txt
test/fixtures/: 01_basics.strdl  02_chaining.strdl  03_edge_cases.strdl
